<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_toc"
            android:icon="@drawable/list1"
            android:title="Table Of Contents" />
    </group>
    <item android:title="Sections">
        <menu>
            <item
                android:id="@+id/nav_PI"
                android:icon="@drawable/list"
                android:title="@string/PI" />
            <item
                android:id="@+id/nav_UP"
                android:icon="@drawable/list"
                android:title="@string/UP" />
            <item
                android:id="@+id/nav_AR"
                android:icon="@drawable/list"
                android:title="@string/AR" />
            <item
                android:id="@+id/nav_AC"
                android:icon="@drawable/list"
                android:title="@string/AC" />
            <item
                android:id="@+id/nav_AM"
                android:icon="@drawable/list"
                android:title="@string/AM" />
            <item
                android:id="@+id/nav_AO"
                android:icon="@drawable/list"
                android:title="@string/AO" />
            <item
                android:id="@+id/nav_TB"
                android:icon="@drawable/list"
                android:title="@string/TB" />
            <item
                android:id="@+id/nav_PC"
                android:icon="@drawable/list"
                android:title="@string/PC" />
            <item
                android:id="@+id/nav_PM"
                android:icon="@drawable/list"
                android:title="@string/PM" />
            <item
                android:id="@+id/nav_TE"
                android:icon="@drawable/list"
                android:title="@string/TE" />
            <item
                android:id="@+id/nav_SC"
                android:icon="@drawable/list"
                android:title="@string/SC" />
            <item
                android:id="@+id/nav_SO"
                android:icon="@drawable/list"
                android:title="@string/SO" />
        </menu>
    </item>

</menu>
